--- a/.github/workflows/publish-templates.yml
+++ b/.github/workflows/publish-templates.yml
@@ -1,4 +1,5 @@
 name: pack-and-publish-templates-package
+
 on:
   push:
     tags: [ 'templates-v*.*.*' ]
@@ -6,7 +7,11 @@ on:
 
 concurrency:
   group: templates-publish-${{ github.ref_name }}
-  cancel-in-progress: false  # serialize per tag.
+  cancel-in-progress: false
+
+defaults:
+  run:
+    shell: bash   # keep steps terse. Can override per-step.  # docs: defaults.run
 
 jobs:
   tests:
@@ -22,41 +27,34 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with: { fetch-depth: 0 }
-
       - uses: actions/setup-dotnet@v4
         with: { global-json-file: ./global.json }
 
       - name: Derive package version
-        shell: bash
-        run: |
-          set -euo pipefail
-          raw="$GITHUB_REF_NAME"                 # e.g., templates-v1.0.0
-          v="${raw#templates-v}"; v="${v#v}"     # drop known prefixes
-          [[ "$v" =~ ^[0-9]+\.[0-9]+\.[0-9]+(-[0-9A-Za-z\.]+)?$ ]] || { echo "Bad SemVer: $v"; exit 1; }
-          echo "PACKAGE_VERSION=$v" >> "$GITHUB_ENV"
-          echo "Derived PACKAGE_VERSION=$v"
+        id: ver
+        uses: ./.github/actions/derive-version-from-tag
+        with: { tag_prefix: 'templates-v' }
 
       - name: Resolve latest Helpers version (stable, else latest)
-        shell: bash
         run: |
           set -euo pipefail
-          helpers_id="AxelKjonsberg.AzureUserFlow.Helpers"
-          base="https://api.nuget.org/v3-flatcontainer/${helpers_id,,}/index.json"
-          versions=$(curl -fsSL "$base" | jq -r '.versions') # flat container index. :contentReference[oaicite:6]{index=6}
+          helpers_package_id="AxelKjonsberg.AzureUserFlow.Helpers"
+          flat_index="https://api.nuget.org/v3-flatcontainer/${helpers_package_id,,}/index.json"
+          versions=$(curl -fsSL "$flat_index" | jq -r '.versions')
           stable=$(jq -r 'map(select(contains("-")|not)) | last // empty' <<<"$versions")
           helpers_version="${stable:-$(jq -r 'last' <<<"$versions")}"
-          echo "HELPERS_PACKAGE_ID=$helpers_id" >> "$GITHUB_ENV"
+          echo "HELPERS_PACKAGE_ID=$helpers_package_id" >> "$GITHUB_ENV"
           echo "HELPERS_VERSION=$helpers_version" >> "$GITHUB_ENV"
+          echo "PACKAGE_VERSION=${{ steps.ver.outputs.version }}" >> "$GITHUB_ENV"
 
-      - name: Inject Helpers ID/version into template.json
-        shell: bash
+      - name: Inject Helpers ID and version into template.json
         run: |
           set -euo pipefail
-          tpl="templates/UserFlow.Templates/content/ApiConnector/.template.config/template.json"
+          template_json_path="templates/UserFlow.Templates/content/ApiConnector/.template.config/template.json"
           jq --arg id "$HELPERS_PACKAGE_ID" --arg v "$HELPERS_VERSION" \
              '.symbols.UserFlowHelpersPackageId.defaultValue=$id
               | .symbols.UserFlowHelpersVersion.defaultValue=$v' \
-             "$tpl" > "$tpl.tmp" && mv "$tpl.tmp" "$tpl"
+             "$template_json_path" > "$template_json_path.tmp" && mv "$template_json_path.tmp" "$template_json_path"
 
       - run: dotnet restore
       - run: dotnet build -c Release --no-restore /p:ContinuousIntegrationBuild=true
@@ -65,60 +63,62 @@ jobs:
         run: |
           set -euo pipefail
           dotnet pack templates/UserFlow.Templates/UserFlow.Templates.csproj \
-            -c Release -o ./artifacts -p:PackageVersion="$PACKAGE_VERSION" -p:ContinuousIntegrationBuild=true
+            -c Release -o ./artifacts -p:PackageVersion="${{ steps.ver.outputs.version }}" -p:ContinuousIntegrationBuild=true
 
-      - name: Smoke test
-        shell: bash
+      - name: Smoke test all templates
         run: |
           set -euo pipefail
-          pkg=$(ls artifacts/*.nupkg | head -n1)
-          dotnet new uninstall AxelKjonsberg.AzureUserFlow.Templates || true  # clean cache. :contentReference[oaicite:8]{index=8}
-          dotnet new install "$pkg"  # install from path. :contentReference[oaicite:9]{index=9}
-          mkdir -p smoke && cd smoke
-          dotnet new b2c-apiconnector -n SmokeTest -o .
-          proj=$(echo src/*.csproj)
-          dotnet restore "$proj"
-          dotnet build "$proj" -c Release
+          package_path="$(ls artifacts/*.nupkg | head -n1)"
+          template_hive_dir="$(mktemp -d)"
+          trap 'rm -rf "$template_hive_dir"' EXIT
+          dotnet new install "$package_path" --debug:custom-hive "$template_hive_dir"
+          mapfile -t template_config_paths < <(find templates/UserFlow.Templates/content -path '*/.template.config/template.json' | sort)
+          template_short_names=()
+          for template_config_path in "${template_config_paths[@]}"; do
+            while IFS= read -r short_name; do
+              [[ -n "$short_name" ]] && template_short_names+=("$short_name")
+            done < <(jq -r '([( .shortName? ] | map(select(. != null))) + ( .shortNameList? // [])) | .[]' "$template_config_path")
+          done
+          mkdir -p smoke
+          for template_short_name in "${template_short_names[@]}"; do
+            echo "Testing template: $template_short_name"
+            work_dir="smoke/${template_short_name}"
+            rm -rf "$work_dir" && mkdir -p "$work_dir"
+            pushd "$work_dir" >/dev/null
+            safe_project_name="SmokeTest_${template_short_name//[^A-Za-z0-9_]/_}"
+            dotnet new "$template_short_name" --name "$safe_project_name" --debug:custom-hive "$template_hive_dir" --force
+            solution_file="$(find . -maxdepth 2 -name '*.sln' | head -n1 || true)"
+            if [[ -n "$solution_file" ]]; then
+              dotnet restore "$solution_file"
+              dotnet build "$solution_file" -c Release -warnaserror
+              dotnet publish "$solution_file" -c Release -o "$work_dir/publish"
+            else
+              project_file="$(find . -name '*.csproj' | head -n1)"
+              dotnet restore "$project_file"
+              dotnet build "$project_file" -c Release -warnaserror
+              dotnet publish "$project_file" -c Release -o "$work_dir/publish"
+            fi
+            popd >/dev/null
+          done
 
-      - name: Push
-        env:
-          NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
-        shell: bash
-        run: |
-          set -euo pipefail
-          for i in {1..5}; do
-            dotnet nuget push "artifacts/*.nupkg" --api-key "$NUGET_API_KEY" --source https://api.nuget.org/v3/index.json --skip-duplicate && break || sleep $((i*i))
-          done  # --skip-duplicate. :contentReference[oaicite:10]{index=10}
+      - name: Push to NuGet
+        uses: ./.github/actions/nuget-push-with-retries
+        with:
+          api_key: ${{ secrets.NUGET_API_KEY }}
+          nupkg_glob: artifacts/*.nupkg
 
   find-tagged-that-are-not-on-nuget:
     if: ${{ github.event_name == 'workflow_dispatch' }}
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    outputs:
-      tags: ${{ steps.collect.outputs.tags }}
-    steps:
-      - uses: actions/checkout@v4
-        with: { fetch-depth: 0 }
-
-      - id: collect
-        shell: bash
-        run: |
-          set -euo pipefail
-          package_id="AxelKjonsberg.AzureUserFlow.Templates"
-          index_url="https://api.nuget.org/v3-flatcontainer/${package_id,,}/index.json"
-          versions_json=$(curl -fsSL "$index_url" || echo '{"versions":[]}')
-          mapfile -t all_tags < <(git tag -l 'templates-v*.*.*' | sort -V)
-          to_publish=()
-          for tag in "${all_tags[@]}"; do
-            v="${tag#templates-v}"
-            jq -e --arg v "$v" '.versions | any(. == $v)' <<<"$versions_json" >/dev/null || to_publish+=("$tag")
-          done
-          printf '%s\n' "${to_publish[@]}" | jq -R . | jq -cs '.' > /tmp/tags.json
-          echo "tags=$(cat /tmp/tags.json)" >> "$GITHUB_OUTPUT"
+    uses: ./.github/workflows/discover-unpublished-tags.yml
+    with:
+      package_id: AxelKjonsberg.AzureUserFlow.Templates
+      tag_glob: 'templates-v*.*.*'
+      tag_prefix: 'templates-v'
+    secrets: inherit
 
   publish-tagged-that-are-not-on-nuget:
     needs: [tests, find-tagged-that-are-not-on-nuget]
-    if: ${{ needs.find-tagged-that-are-not-on-nuget.outputs.tags != '[]' }} # run only when there are tags to publish
+    if: ${{ needs.find-tagged-that-are-not-on-nuget.outputs.tags != '[]' }}
     runs-on: ubuntu-latest
     timeout-minutes: 30
     strategy:
@@ -131,48 +131,39 @@ jobs:
         with:
           fetch-depth: 0
           ref: ${{ matrix.tag }}
-
       - name: Set version from tag
-        env:
-          MATRIX_TAG: ${{ matrix.tag }} # e.g., templates-v1.0.0
-        shell: bash
         run: |
           set -euo pipefail
-          v="${MATRIX_TAG#templates-v}"; v="${v#v}"
-          echo "PACKAGE_VERSION=$v" >> "$GITHUB_ENV"
-          echo "Derived PACKAGE_VERSION=$v"
-
+          tag_name="${{ matrix.tag }}"
+          package_version="${tag_name#templates-v}"; package_version="${package_version#v}"
+          echo "PACKAGE_VERSION=$package_version" >> "$GITHUB_ENV"
       - uses: actions/setup-dotnet@v4
         with: { global-json-file: ./global.json }
-
       - name: Resolve latest Helpers version
-        shell: bash
         run: |
           set -euo pipefail
-          helpers_id="AxelKjonsberg.AzureUserFlow.Helpers"
-          base="https://api.nuget.org/v3-flatcontainer/${helpers_id,,}/index.json"
-          versions=$(curl -fsSL "$base" | jq -r '.versions')
+          helpers_package_id="AxelKjonsberg.AzureUserFlow.Helpers"
+          flat_index="https://api.nuget.org/v3-flatcontainer/${helpers_package_id,,}/index.json"
+          versions=$(curl -fsSL "$flat_index" | jq -r '.versions')
           stable=$(jq -r 'map(select(contains("-")|not)) | last // empty' <<<"$versions")
           helpers_version="${stable:-$(jq -r 'last' <<<"$versions")}"
-          echo "HELPERS_PACKAGE_ID=$helpers_id" >> "$GITHUB_ENV"
+          echo "HELPERS_PACKAGE_ID=$helpers_package_id" >> "$GITHUB_ENV"
           echo "HELPERS_VERSION=$helpers_version" >> "$GITHUB_ENV"
-
-      - name: Inject Helpers ID/version into template.json
+      - name: Inject Helpers ID and version into template.json
         run: |
-          tpl="templates/UserFlow.Templates/content/ApiConnector/.template.config/template.json"
+          template_json_path="templates/UserFlow.Templates/content/ApiConnector/.template.config/template.json"
           jq --arg id "$HELPERS_PACKAGE_ID" --arg v "$HELPERS_VERSION" \
              '.symbols.UserFlowHelpersPackageId.defaultValue=$id
               | .symbols.UserFlowHelpersVersion.defaultValue=$v' \
-             "$tpl" > "$tpl.tmp" && mv "$tpl.tmp" "$tpl"
-
+             "$template_json_path" > "$template_json_path.tmp" && mv "$template_json_path.tmp" "$template_json_path"
       - run: dotnet restore
       - run: dotnet build -c Release --no-restore /p:ContinuousIntegrationBuild=true
       - name: Pack
         run: |
           dotnet pack templates/UserFlow.Templates/UserFlow.Templates.csproj \
             -c Release -o ./artifacts /p:PackageVersion="$PACKAGE_VERSION" /p:ContinuousIntegrationBuild=true
-
-      - name: Push
-        env:
-          NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
-        run: dotnet nuget push "artifacts/*.nupkg" --api-key "$NUGET_API_KEY" --source https://api.nuget.org/v3/index.json --skip-duplicate
+      - name: Push to NuGet
+        uses: ./.github/actions/nuget-push-with-retries
+        with:
+          api_key: ${{ secrets.NUGET_API_KEY }}
+          nupkg_glob: artifacts/*.nupkg
